fixes: seach field background, balance container height+inner paddings, collapsed sidebar, kpi containers

--- a/src/app/components/balance/balance.component.scss
+++ b/src/app/components/balance/balance.component.scss
@@ -4,6 +4,7 @@
   @include blueGreyBg;
   padding: 16px;
   min-width: 300px;
+  height: 106px;
   div {
     .body-S {
       @include margin-bottom(8px);
