--- a/src/app/components/header/components/search/search.component.scss
+++ b/src/app/components/header/components/search/search.component.scss
@@ -13,8 +13,11 @@
         background-color: rgba(0, 0, 0, 0);
       }
     }
-    .mat-form-field-appearance-fill {
+    .mat-form-field-appearance-fill .mat-form-field-flex {
+      background-color: $blueGrey800;
       border-radius: 8px;
+    }
+    .mat-form-field-appearance-fill {
       width: 490px;
       padding: 6px 0;
       background: none;
